Umsatzsteueroption (#134)
* Add tax calculation

add columns steuersatz, steuerbetrag in table mitgliedskonto
add availability to print steuersatz and steuerbetrag in bills PDF
calculate steuerbtrag in Abrechnungslauf
show steuersatz and steuerbetrag in Abrechnungslauf view

* Cleanup on tax caclulation

* Update tax calculation

Add bill amount without taxes (nettobetrag)

* Bugfix tax calculation

Fix calulations of taxes nettobetrag and steuerbetrag

* Bugfix tax calculation in member bill account

Bugfix in member bill account
Beautify form preview taxes and values

* code cleanup

* Change wording Summe to USt.

* Add Umsatzsteueroption in settings

Change sum wording in forms if tax option is set to true

* Format sum of taxes wording

* Format taxes

Taxes are now in align right

* Fix: Set tax rate if buchungsart != null

* Fix: Allow null values for nettobetrag, steuersatz, steuerbetrag in database

* Zeige Tabellenspalten nur bei gesetzter Umsatzsteueroption

---------

Co-authored-by: Alexander Dippe <info@dippe-it.de>